--- a/css/style.css
+++ b/css/style.css
@@ -425,11 +425,14 @@ body {
 }
 .our-item {
   background-color: var(--white-color);
-  border-bottom: 1px solid var(--border-color);
+
+  position: relative;
+  overflow: hidden;
 }
+
 .our-item:hover,
 .our-item:focus {
-  box-shadow: 2px 2px 3px 0px var(--border-color);
+  box-shadow: 2px 2px 3px 3px var(--border-color);
 }
 .our-item__title {
   font-size: 18px;
@@ -445,6 +448,41 @@ body {
   font-family: inherit;
   margin-left: 24px;
   margin-bottom: 20px;
+}
+/* Portofolio page with  projects cards and OVERLAY class  */
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  transition-duration: 500ms;
+  background-color: var(--blue-hover-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white-color);
+  border: none;
+  width: 100%;
+  height: 100%;
+  flex-shrink: 0;
+}
+.overlay-text {
+  color: #fff;
+  font-family: Roboto;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: auto; /* 155.556% */
+  letter-spacing: 0.54px;
+  padding-left: 40px;
+  padding-top: 10px;
+}
+.foto {
+  width: 370px;
+  height: 294px;
+}
+.foto:hover .overlay {
+  transform: translateY(0%);
 }
 /*Footer section with adress info and contacts */
 .footer-section .container {
